--- a/staff_home.css
+++ b/staff_home.css
@@ -27,59 +27,50 @@ body {
 }
 
 .container {
-  align-items: center;
-  text-align: center;
-  gap: 10px;
-  padding: 10px;
+    position: relative;
+    text-align: left; 
+    padding: 10px;
 }
 
-
-.header marquee {
-  font-size: 20px;
-  color: #fff;
-  flex: 1;
-}
 
 /* NAV MENU */
 nav {
-  float: right;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 32px;
+  padding: 20px 0px;
 }
 
 nav a {
   color: black;
   text-decoration: none;
   font-size: 18px;
-  margin: 0 10px;
+  padding: 2px 10px;
   font-weight: 500;
 }
 
+.user-icon {
+  width: 48px;
+  height: 40px;
+  border-radius: 50%;
+  margin-left: 16px;
+}
 
 
 /**********LOGO SECTION**********/
-.container .logo {
-	height: 70px;
-    margin-top: 30px;
-    padding-bottom: 10px;
-    margin-left: 0px;
-    width:70px;
+.logo {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    height: 70px;
+    width: 70px;
+    margin: 0;
+    padding: 0;
 }
 
 /**********MENU SECTION**********/
-nav {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 32px; 
-    padding: 20px 0px;
-}
 
-nav a {
-    color: black;
-    text-decoration: none;
-    font-size: 18px;
-    padding: 2px 10px;
-    font-weight: 500;
-}
 
 .user-icon {
     position: static; 
@@ -140,16 +131,6 @@ button {
 button:hover {
     background: #2980b9;
 }
-
-.logo {
-    position: absolute;
-    top: 20px;
-    left: 30px;
-    width: 80px;
-    height: auto;
-    z-index: 10;
-}
-
 
 .event {
 	width: 40%;
